source/_patterns/02-molecules/blocks/hero/_hero.scss
.jcc-hero {
  @include u-position(relative);
  @include u-bg(primary-lighter);
}

.jcc-hero--viewport-height {
  @include u-minh("viewport");
}

.jcc-hero--minimum-height {
  .jcc-hero__content {
    @include u-padding-bottom(2);
  }
}

.jcc-hero--has-background-image {
  @include u-text("white");

  .jcc-hero__media {
    @include cover-image();
  }
}

.jcc-hero--has-background-color--light,
.jcc-hero--has-background-color--dark {
}

.jcc-hero--has-background-color--light {
  @include light-background($light-background-color: secondary-lighter);

  .jcc-breadcrumb__item a {
    @include light-background-link();
  }
}

.jcc-hero--inset-bottom {
  @include at-media(desktop) {
    padding-bottom: 10rem;
  }
}

.jcc-hero--has-background-color--dark {
  @include dark-background();

  a {
    @include dark-background-link();
  }

  .jcc-breadcrumb__item a {
    @include dark-background-link();
  }

  .jcc-hero__title,
  .jcc-breadcrumb__item {
    @include dark-background-text();
  }
}

.jcc-hero--has-background-color--none {
  @include u-bg("transparent");
}

.jcc-hero__container {
  @include grid-container(widescreen);

  @include at-media(desktop) {
  }
}

.jcc-hero__content {
  @include t-intro();
  @include u-padding-top(10);
  @include u-padding-bottom(6);
  @include u-line-height("body", 6);
  @include u-position(relative);

  @if $srl {
    @include at-media-max(tablet-lg) {
      @include u-padding-top(4);
    }

    @include at-media(tablet-lg) {
      @include u-padding-top(6);
    }
  }
}

.jcc-hero__brow {
  @include u-display("block");
  @include t-copy();
  @include u-text(uppercase);
  @include u-text(ls-3);
  @include u-color(secondary);

  a {
    @include u-color(secondary, !important);
  }
  @include u-margin-top(3);
}

.jcc-hero--has-background-color--dark {
  .jcc-hero__brow {
    @include u-text("white");
  }
}

.jcc-hero__title {
  @include u-font(heading, 14); // 40

  @include at-media(tablet) {
    @include u-font(heading, 16); // 56
  }
  @include u-line-height("heading", 2);
  @include u-text(primary-darker);
  @if $trial {
    @include u-color(primary-dark);
  }
  @include u-margin-y(3);
}

.jcc-hero__title--sr-only {
  @include sr-only();
}

.jcc-hero__brow + .jcc-hero__title {
  @include u-margin-top(0);
}

.jcc-hero__lead {
  @include responsive-lead();
  @include u-margin-bottom(2);
  @include u-line-height(body, 3);
}

.jcc-hero--has-one-column {
  .jcc-hero__lead,
  .jcc-body,
  .jcc-hero__column-right {
    @include at-media(desktop) {
      @include u-measure("6");
    }
  }

  .jcc-hero__column-left {
    @include u-margin-bottom(4);
  }
}

.jcc-hero--has-banner-image {
  @include at-media(desktop) {
    $col-width: (get-uswds-value(width, desktop) - 8rem) / 3;
    display: grid;
    grid-gap: 2rem;
    grid-template-columns:
      minmax(0, 1fr) minmax(0, $col-width) minmax(0, $col-width) minmax(0, $col-width)
      minmax(0, 1fr);
    grid-template-areas: "out-left col-one col-two col-three out-right";
  }

  @include at-media(desktop-lg) {
    $col-width: (get-uswds-value(width, desktop-lg) - 8rem) / 3;
    grid-template-columns:
      minmax(0, 1fr) minmax(0, $col-width) minmax(0, $col-width) minmax(0, $col-width)
      minmax(0, 1fr);
  }

  @include at-media(widescreen) {
    $col-width: (get-uswds-value(width, widescreen) - 8rem) / 3;
    grid-template-columns:
      minmax(0, 1fr) minmax(0, $col-width) minmax(0, $col-width) minmax(0, $col-width)
      minmax(0, 1fr);
  }

  .jcc-hero__lead,
  .jcc-hero__body,
  .jcc-hero__body > *,
  .jcc-hero__column-left,
  .jcc-hero__column-right {
    @include u-maxw(full);
  }

  .jcc-hero__container {
    @include at-media(desktop) {
      @include u-padding-left(0);
      @include u-padding-right(0);
      grid-column-start: col-one;
      grid-column-end: col-two;
    }
  }

  .jcc-hero__banner {
    grid-column-start: col-three;
    grid-column-end: out-right-end;
    // background-image: url(http://placeimg.com/700/500/nature);
    background-repeat: no-repeat;
    background-position: left center;
    background-size: auto 100%;
  }
}

.jcc-hero--has-banner-image-half {
  @include at-media(desktop) {
    display: grid;
    grid-gap: 2rem;
    grid-template-columns: 0 repeat(2, minmax(0, 50%)) 0;
    grid-template-areas: "out-left col-one col-two out-right";
  }

  @include at-media(widescreen) {
    $col-width: (get-uswds-value(width, widescreen) - 6rem) / 2;
    grid-template-columns: minmax(0, 1fr) repeat(2, minmax(0, $col-width)) minmax(0, 1fr);
  }

  .jcc-hero__lead,
  .jcc-hero__body,
  .jcc-hero__body > *,
  .jcc-hero__column-left,
  .jcc-hero__column-right {
    @include u-maxw(full);
  }

  .jcc-hero__container {
    @include at-media(desktop) {
      @include u-padding-left(0);
      @include u-padding-right(0);
      grid-column-start: col-one;
      grid-column-end: col-one;
    }
  }

  .jcc-hero__banner {
    grid-column-start: col-two;
    grid-column-end: out-right-end;
    // background-image: url(http://placeimg.com/700/500/nature);
    background-repeat: no-repeat;
    background-position: left center;
    background-size: auto 100%;
  }
}

.jcc-hero__columns {
  > :last-child {
    @include u-margin-bottom(0);
    @include u-padding-bottom(0);
  }
}

.jcc-hero--has-two-columns-half,
.jcc-hero--has-two-columns-threequarter {
  .jcc-hero__columns {
    @include at-media(desktop) {
      @include grid-row;
      @include grid-gap;
    }
  }
}

.jcc-hero--has-two-columns-half {
  .jcc-hero__column-left,
  .jcc-hero__column-right {
    @include u-width(full);

    @include at-media(desktop) {
      @include grid-col(6);
    }
  }
}

.jcc-hero--has-two-columns-threequarter {
  .jcc-hero__column-left,
  .jcc-hero__column-right {
    @include u-width(full);
  }

  .jcc-hero__column-left {
    @include at-media(desktop) {
      @include grid-col(8);
    }
  }

  .jcc-hero__column-right {
    @include at-media(desktop) {
      @include grid-col(4);
    }
  }
}

.jcc-hero__column-left {
  @include u-margin-bottom(3);

  @include at-media(desktop) {
    @include u-margin-bottom(0);
    max-width: 75%;
  }
}

.jcc-hero__column-left,
.jcc-hero__column-right {
  > :last-child {
    @include u-margin-bottom(0);
    @include u-padding-bottom(0);
  }
}

.jcc-hero__body,
.jcc-hero__column-right {
  @extend .usa-prose;
}

/* remove uppercase brow if lowercase_brow = true */
.jcc-hero--lowercase-brow {
  .jcc-hero__brow {
    @include u-font(body, 9);
    @include u-text(no-uppercase, ls-1);
  }
}

